# template_cpp

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cc  main.cpp  main.test.cc
src/options_parser/: options_parser.cc  options_parser.h
tools/cmake/: Defaults.cmake  main-config.cmake
